# DynSimMKS

./: .gitignore  README.md
Programm/: .gitignore  .gitignore.txt  CMakeLists.txt
Programm/Common/: Config.h  StringTools.cpp  StringTools.h  timing.cpp  timing.h
Programm/Simulation/: BoundingVolume.cpp  BoundingVolume.h  BoundingVolumeTree.cpp  BoundingVolumeTree.h  BoundingVolumeTreeNode.cpp  BoundingVolumeTreeNode.h  CMakeLists.txt  Collision.cpp  Collision.h  Cube.cpp  Cube.h  ForceManager.cpp  ForceManager.h  GlobalForce.cpp  GlobalForce.h  Gravity.cpp  Gravity.h  IForce.cpp  IForce.h  IJoint.cpp  IJoint.h  IScene.cpp  IScene.h  ImpulseTest.cpp  ImpulseTest.h  ObjectManager.cpp  ObjectManager.h  Particle.cpp  Particle.h  RigidBody.cpp  RigidBody.h  SceneBoundingVolume.cpp  SceneBoundingVolume.h  SceneBoundingVolumeTwo.cpp  SceneBoundingVolumeTwo.h  SceneCollisionTest01.cpp  SceneCollisionTest01.h  SceneCollisionTest02.cpp  SceneCollisionTest02.h  SceneCollisionTest03.cpp  (+31 more)
Programm/Visualization/: MiniGL.cpp  MiniGL.h
Programm/presentation/: abschlusspraesentation.odp
